--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsfBKGYP5fEfpFvz-ymeXiCoGRvqbsn-M&loading=async"></script>
   <meta charset="utf-8">
   <title>Rastreamento</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icone.png">
 </head>
 <body>
   <app-root></app-root>
