--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Rastreamento</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icone.png">
+  <link rel="icon" type="image/x-icon" href="assets/ícone.png">
 </head>
 <body>
   <app-root></app-root>
