Implementação do AutoComplete. ID1. Outros refinamentos precisam ser feitos.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
+  <!-- <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsfBKGYP5fEfpFvz-ymeXiCoGRvqbsn-M&libraries=places"
+  async
+  defer
+></script> -->
+
   <meta charset="utf-8">
   <title>Rastreamento</title>
   <base href="/">
